@@ -2983,6 +2983,31 @@ Their definitions can be found in melon/include/mln_types.h.
       g) mln_list_null();
          This is used to initialize linked list.
 
+  45) Array
+      a) int mln_array_init(mln_array_t *arr, struct mln_array_attr *attr);
+         Initialize an array indicated by 'arr' with attribute 'attr'.
+
+      b) mln_array_t *mln_array_new(struct mln_array_attr *attr);
+         Create an array with attribute 'attr'.
+
+      c) void mln_array_destroy(mln_array_t *arr);
+         Release all elements in 'arr'.
+
+      d) void mln_array_free(mln_array_t *arr);
+         Release all elements in 'arr' and free 'arr'.
+
+      e) void *mln_array_push(mln_array_t *arr);
+         Push an element in 'arr' and return this new element pointer.
+
+      f) void *mln_array_pushn(mln_array_t *arr, mln_size_t n);
+         Push 'n' elements in 'arr' and return the pointer of these elements.
+
+      g) mln_array_elts(arr);
+         Get elements.
+
+      h) mln_array_nelts(arr);
+         Get the number of elements.
+
 5. Framework Usage
    It is very easy to use this framework. Before we use it, we have to initialize it.
    1) include header file.
